<resources>
    <string name="app_name">Lucapp</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="lucapp_image">LucApp image</string>
    <string name="good_morning">Good Morning</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="appointment">Appointment</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="border">|</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_to_appoint">Click to Appoint</string>
    <string name="name">Name</string>
    <string name="date">12/12/1990</string>
    <string name="choose_gender">Gender</string>
    <string name="personal_details">Personal Details</string>
    <string name="Address">Address</string>
    <string name="house_number">House No.</string>
    <string name="street_number">Street Number</string>
    <string name="choose_country">Country</string>
    <string name="choose_city">City</string>
    <string name="contact_number">Contact Number</string>
    <string name="update">Update</string>
    <string name="page_title">Title</string>
    <string name="search_doctors">Search Doctors</string>
    <string name="about_me">About Me</string>
    <string name="working_time">Working Time</string>
    <string name="reviews">Reviews</string>
    <string name="appoint">Make an Appointment</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="choose_time">Select time</string>
    <string name="next">Next</string>
    <string name="medical_report">Medical Reports</string>
    <string name="report_id">Report ID:</string>
    <string name="patient_name">Patient Name</string>
    <string name="doc_name">Doctor Name</string>
    <string name="report_description">Description</string>
    <string name="report_image">Attached Image</string>
    <string name="generation_date">Date:</string>
    <string name="generation_time">Time:</string>
    <string name="download">Download</string>
    <string name="search_medicines">Search Medicines</string>
    <string name="medication_details">Medicine Details</string>
    <string name="medication_timing">Medicine Timing</string>
    <string name="medication_name">Name</string>
    <string name="medication_grams">Total Grams</string>
    <string name="medication_start_date">Start Date</string>
    <string name="medication_end_date">End Date</string>
    <string name="timing">Time</string>
    <string name="set_an_alarm">Add</string>
    <string name="cancel_an_alarm">Cancel</string>
    <string name="create_new_account">Create New Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_email">Enter email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_link">Don\'t have an account?</string>
</resources>