<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp"
            android:padding="10dp"
            >
            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/return_icon_foreground"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_appointment"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:textSize="18sp"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:paddingLeft="15dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_semibold"
            />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/calender_background"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="73dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_time"
            android:paddingLeft="15dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_semibold"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menu_drop"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp">

                <AutoCompleteTextView
                    android:id="@+id/drop_items"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:background="@xml/edit_text"
                    android:focusable="false"
                    android:inputType="none"
                    android:padding="0dp"
                    android:text="@string/choose_time"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="120dp"
                />
            <Button
                android:id="@+id/nextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:background="@xml/button_background"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/appoint"
                android:textAllCaps="false" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
