<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    android:layout_height="match_parent"-->
<!--    android:layout_width="match_parent"-->
<!--    >-->
<!--    -->


<!--</ScrollView>-->

<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:layout_margin="10dp"
    android:id="@+id/appointmentCardView"
    app:cardElevation="6dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/background_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="5dp"
            android:src="@drawable/medical_report_image"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/generation_time"
                android:layout_weight="0.5"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/generationTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/report_id"
                android:textStyle="italic"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/generation_date"
                android:layout_weight="0.5"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/generationDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/report_id"
                android:textStyle="italic"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/report_id"
                android:layout_weight="2"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/reportID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/report_id"
                android:textStyle="italic"
                android:layout_weight="2"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/patient_name"
                android:layout_weight="2"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/patientName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/report_id"
                android:textStyle="italic"
                android:layout_weight="2"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/doc_name"
                android:layout_weight="2"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/docName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Dr. Jhon"
                android:textStyle="italic"
                android:layout_weight="2"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_description"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/reportDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:textSize="16sp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/downloadButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:backgroundTint="@color/medical_blue"
                app:srcCompat="@drawable/download_icon_foreground"
                android:focusable="true"
                android:contentDescription="@string/download" />


        </LinearLayout>

<!--                    <LinearLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:orientation="vertical">-->

<!--                        <TextView-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:text="@string/report_image"-->
<!--                            android:fontFamily="@font/poppins_semibold"-->
<!--                            android:textColor="@color/black"-->
<!--                            android:layout_margin="5dp"-->
<!--                            android:textSize="16sp" />-->

<!--                        <ImageView-->
<!--                            android:id="@+id/detectedImage"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="300dp"-->
<!--                            android:padding="10dp"-->
<!--                            android:src="@drawable/lucapp"-->
<!--                            />-->
<!--                    </LinearLayout>-->

    </LinearLayout>




</androidx.cardview.widget.CardView>

