<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/return_icon_foreground"
                />
            <TextView
                android:id="@+id/topDoctorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dr. Jennifer"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:textSize="18sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_background"
            android:orientation="horizontal"
            android:padding="10dp">


            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_margin="2dp"
                android:padding="5dp"
                android:layout_weight="1">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:id="@+id/docImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:scaleType="centerCrop"
                        android:src="@drawable/lucapp" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/doctorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Dr. Jennifer"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <View style="@style/Divider" />

                <View style="@style/EmptyHorizontalDivider" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/speciality"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:text="Cardiologist"
                        android:textColor="@color/black" />

                    <View style="@style/EmptyVerticalDivider" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/border"
                        android:textColor="@color/black" />

                    <View style="@style/EmptyVerticalDivider" />

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:text="4.5"
                        android:textColor="@color/black" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_me"
                android:fontFamily="@font/poppins_semibold"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/doctorDescription"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:fontFamily="@font/poppins_light"
                android:textSize="15sp"
                android:text=" Helper Text Helper Text Helper  Helper Text Helper Text Helper Text Helper Text Helper TextText Helper Text Helper Text Helper Text Helper Text Helper Text Helper Text Helper Text Helper Text Helper Text Helper Text Helper Text Helper Text Helper Text"
                android:textColor="@color/black"
                android:gravity="top"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/working_time"
                android:fontFamily="@font/poppins_semibold"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/workingTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:textSize="15sp"
                android:text="Monday - Friday 9:00 AM - 5:00 PM"
                android:textColor="@color/black"
                android:gravity="top"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reviews"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:textSize="18sp" />

            <!--Include the reviews list-->
<!--            <include layout="@layout/fragment_reviews_list"/>-->
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp">
        <!--Appoint Button-->
        <Button
            android:id="@+id/makeAppointment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:background="@xml/button_background"
            android:text="@string/appoint"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:drawableEnd="@drawable/right_arrow_foreground"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center_vertical"
            android:paddingLeft="10dp" />
    </LinearLayout>



</LinearLayout>
